fix(adhoc): prevent base url from wrapping

--- a/spot-client/src/common/css/_meeting-name-entry.scss
+++ b/spot-client/src/common/css/_meeting-name-entry.scss
@@ -36,6 +36,7 @@
             font-size: 16px;
             line-height: 1.1875em;
             padding: 6px 0 7px;
+            white-space: nowrap;
         }
     }
 
